--- a/index7.html
+++ b/index7.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Charada 5</title>
+  <title>Charada 7</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -40,11 +40,12 @@
 <body>
 
   <div class="content">
-    <h1>Charada 5</h1>
-    <p class="charada">Sou amigo leal, com orelhas a balançar,<br>
-    Corro atrás de bolas e adoro brincar.<br>
-    Com meu nome fofinho, você pode me chamar,<br>
-    Quem sou eu, esse cãozinho a alegrar?</p>
+    <h1>Charada 7</h1>
+    <p class="charada">Ele é careca, mas não se importa,<br>
+    Sua cabeça brilha mais que o sol.<br>
+    Sempre cheio de ideias e com muito humor,<br>
+    Ele nunca perde a cabeça.<br>
+    Quem é ele?</p>
     <p class="charada">Digite sua resposta na URL após "?" (Exemplo: www.seusite.com?resposta=suaresposta) e pressione Enter.</p>
   </div>
 
@@ -54,7 +55,7 @@
       const currentUrl = window.location.href;
       if (!currentUrl.includes('?resposta=')) {
         const baseUrl = currentUrl.split('?')[0]; // Remove qualquer parâmetro existente
-        window.location.href = `${baseUrl}?resposta=`;
+        window.location.href = `${baseUrl}?resposta=`; 
       } else {
         verificarResposta(); // Verifica automaticamente ao carregar a página
       }
@@ -67,9 +68,9 @@
 
     function verificarResposta() {
       const resposta = getUrlParameter('resposta');
-      if (resposta && resposta.toLowerCase() === "flocos") {
+      if (resposta && resposta.toLowerCase() === "samuel") {
         alert("Resposta correta! Vamos para a próxima.");
-        window.location.href = "index66.html"; // Redireciona para index6.html
+        window.location.href = "index8.html"; // Redireciona para index8.html
       } else if (resposta && resposta !== "") {
         alert("Resposta incorreta. Tente novamente digitando a resposta correta na URL.");
       }
